add cursor pointer for demo purposes

--- a/src/styles/components/_shared.scss
+++ b/src/styles/components/_shared.scss
@@ -18,6 +18,7 @@
 .logo {
   align-items: center;
   color: $color-lightest-gray;
+  cursor: pointer; /* to imply that this takes us home */
   display: flex;
   font-size: 24px;
   font-weight: bold;
