--- a/src/styles/components/_car-collection.scss
+++ b/src/styles/components/_car-collection.scss
@@ -128,6 +128,7 @@
   &:hover {
     opacity: 1;
     color: $color-brand-blue;
+    cursor: pointer;
   }
 
   // ex
@@ -165,8 +166,8 @@
       opacity: 0;
 
       &:hover {
+        cursor: pointer;
         opacity: 1;
-
         /* a1 */
         .car-coll__title:after {
           width: 100%;
